# subsync

./: README.md  Taskfile.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: sequential-thinking.agent.md
.github/instructions/: python.instructions.md
ai/context/: sequential-thinking-mcp-docs.md
docs/: ALGORITHM.md  SUBTITLE_GENERATION_ALGORITHM.md
